Migrate Link.jsx to astro.

--- a/src/components/navigation/NavBar/NavBar.astro
+++ b/src/components/navigation/NavBar/NavBar.astro
@@ -2,7 +2,7 @@
 import { Image } from "astro:assets";
 import * as ReactIcons from "react-icons/fa/index.js";
 import BrandImage from "../../../assets/images/brand/brand.svg";
-import Link from "../../ui/Link/Link";
+import Link from "../../ui/Link/Link.astro";
 import NavBarItem from "./NavBarItem.astro";
 const { FaBars } = ReactIcons;
 ---
