--- a/src/pages/sections/index/HeroSection.astro
+++ b/src/pages/sections/index/HeroSection.astro
@@ -2,7 +2,7 @@
 import { Image } from "astro:assets";
 import * as ReactIcons from "react-icons/fa/index.js";
 import HeroImage from "../../../assets/images/brand/hero.png";
-import Link from "../../../components/ui/Link/Link.jsx";
+import Link from "../../../components/ui/Link/Link.astro";
 import Section from "../../../layouts/Section.astro";
 const { FaGithub, FaLinkedin } = ReactIcons;
 ---
