--- a/src/pages/sections/index/FeatureSection.astro
+++ b/src/pages/sections/index/FeatureSection.astro
@@ -5,7 +5,7 @@ import Project2 from "../../../assets/images/projects/project_2.png";
 import Project3 from "../../../assets/images/projects/project_3.png";
 import Project4 from "../../../assets/images/projects/project_4.png";
 import Card from "../../../components/ui/Card/Card.astro";
-import Link from "../../../components/ui/Link/Link.jsx";
+import Link from "../../../components/ui/Link/Link.astro";
 const { FaArrowRight } = ReactIcons;
 
 const projectsData = [
