--- a/src/components/navigation/NavBar/NavBar.astro
+++ b/src/components/navigation/NavBar/NavBar.astro
@@ -24,6 +24,7 @@ const { FaBars } = ReactIcons;
       class="flex items-center space-x-3 md:order-2 md:space-x-0 rtl:space-x-reverse"
     >
       <Link
+        target="_blank"
         route="http://tinyurl.com/contact-wsp"
         classVariant="btn btn-secondary uppercase"
       >
