--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -53,7 +53,7 @@ const { title } = Astro.props;
   }
 
   .btn-gradient {
-    @apply border-[var(--CL-neutral-black)] bg-gradient-to-br from-violet-600 to-cyan-500;
+    @apply border-[var(--CL-neutral-black)] bg-gradient-to-br from-violet-600 to-cyan-500 text-white;
   }
 
   .btn-primary {
