--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,10 @@
 ---
 import HeroSection from "../pages/sections/about/HeroSection.astro";
+import ActionSection from "./sections/about/ActionSection.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="RysthCraft | About Us">
   <HeroSection />
+  <ActionSection />
 </Layout>
