--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,6 +3,6 @@ import HeroSection from "../pages/sections/about/HeroSection.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="RysthCraft | About Us">
+<Layout title="RysthCraft | About Us | Full-Stack Web Developer">
   <HeroSection />
 </Layout>
