--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,5 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import ContactSection from "./sections/index/ContactSection.astro";
-import FeatureSection from "./sections/index/FeatureSection.astro";
-import HeroSection from "./sections/index/HeroSection.astro";
 ---
 
-<Layout title="RysthCraft | Software Developer | Professional Websites">
-  <HeroSection />
-  <FeatureSection />
-  <ContactSection />
-</Layout>
+<Layout title="RysthCraft | Software Developer | Professional Websites" />
