--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,8 @@
 ---
-import "animate.css";
+import NavigationBar from "../components/navigation/NavigationBar/NavigationBar.astro";
 interface Props {
   title: string;
 }
-import NavBar from "../components/navigation/NavBar/NavBar.astro";
-import Footer from "../components/navigation/Footer/Footer.astro";
-
 const { title } = Astro.props;
 ---
 
@@ -20,9 +17,8 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <NavBar />
+    <NavigationBar />
     <slot />
-    <Footer />
     <script
       is:inline
       src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.js"
@@ -34,33 +30,11 @@ const { title } = Astro.props;
   @import url("https://fonts.cdnfonts.com/css/poppins");
 
   :root {
-    --CL-neutral-black: #1f1d2b;
     --CL-primary-blue: #2e3191;
   }
 
   body {
     font-family: "Poppins", sans-serif;
-    background-color: var(--CL-neutral-black);
-  }
-
-  button,
-  a {
-    @apply md:hover:scale-105 md:active:scale-95 md:transition;
-  }
-
-  .btn {
-    @apply border p-4 px-6 text-xs text-center rounded-lg sm:w-32 sm:text-sm;
-  }
-
-  .btn-gradient {
-    @apply border-[var(--CL-neutral-black)] bg-gradient-to-br from-violet-600 to-cyan-500 text-white;
-  }
-
-  .btn-primary {
-    @apply border-transparent bg-[var(--CL-primary-blue)] text-white;
-  }
-
-  .btn-secondary {
-    @apply border md:hover:bg-white md:hover:text-[var(--CL-neutral-black)] text-white;
+    background-color: var(--CL-primary-blue);
   }
 </style>
