Add Hero heading.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,4 +2,23 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="RysthCraft | Software Developer | Professional Websites" />
+<Layout title="RysthCraft | Software Developer | Professional Websites">
+  <section class="p-4">
+    <article class="max-w-screen-xl py-24 mx-auto md:py-32 lg:py-44">
+      <header class="flex flex-col items-center gap-5 text-white">
+        <h2
+          class="inline-block max-w-screen-sm text-3xl font-bold text-center lg:max-w-screen-md sm:text-xl md:text-4xl lg:text-6xl"
+        >
+          Building <span class="mb-1 text-cyan-300">Amazing</span>
+           Websites and Software Solutions
+        </h2>
+        <p
+          class="max-w-screen-sm px-8 text-sm text-center text-gray-200 md:text-base"
+        >
+          Welcome to RysthCraft's Website. I'm John Palacios, a Software
+          Developer, weaving digital sites with React, Astro, and Ruby on Rails.
+        </p>
+      </header>
+    </article>
+  </section>
+</Layout>
