Enhance HeroSection design.

--- a/src/components/navigation/NavigationBar/NavigationBar.astro
+++ b/src/components/navigation/NavigationBar/NavigationBar.astro
@@ -5,7 +5,7 @@ import * as ReactIcons from "react-icons/hi2";
 const { HiBars3BottomRight } = ReactIcons;
 ---
 
-<nav class="fixed top-0 z-50 w-full">
+<nav class="fixed top-0 z-50 w-full bg-[var(--CL-primary-blue)]">
   <div
     class="flex flex-wrap items-center justify-between max-w-screen-xl p-4 mx-auto sm:py-6"
   >
@@ -15,7 +15,7 @@ const { HiBars3BottomRight } = ReactIcons;
     <div class="flex space-x-3 md:order-2 md:space-x-0">
       <a
         href="/contacts"
-        class="p-2 px-6 text-sm text-center text-[var(--CL-primary-blue)] duration-100 bg-white rounded-lg md:p-3 md:px-8 md:hover:bg-black md:hover:text-white md:transition"
+        class="p-2 px-6 text-sm text-center text-[var(--CL-primary-blue)] duration-100 bg-white rounded-lg md:p-3 md:px-8 md:hover:bg-black md:hover:text-white md:transition grid place-items-center"
         >Contact</a
       >
       <button
