--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,12 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import { Image } from "astro:assets";
-import HeroImage from "../assets/images/hero/hero.png";
+import HeroImage from "../assets/images/hero/hero.jpg";
+import AstroImage from "../assets/images/technologies/astro.svg";
+import ReactImage from "../assets/images/technologies/react.svg";
+import RailsImage from "../assets/images/technologies/rails.svg";
+import HTMLImage from "../assets/images/technologies/html.svg";
+import CSSImage from "../assets/images/technologies/css.svg";
 ---
 
 <Layout title="RysthCraft | Software Developer | Professional Websites">
@@ -46,13 +51,41 @@ import HeroImage from "../assets/images/hero/hero.png";
           alt="Hero Image"
           class="block w-full h-full max-w-4xl mx-auto rounded-xl"
         />
-        <main class="flex"></main>
+        <main
+          class="flex flex-wrap items-center justify-center gap-5 mt-5 md:gap-20"
+        >
+          <Image
+            src={HTMLImage}
+            alt="HTML Image"
+            class="w-8 transition duration-300 opacity-80 md:hover:opacity-100 sm:w-20"
+          />
+          <Image
+            src={CSSImage}
+            alt="CSS Image"
+            class="w-8 transition duration-300 opacity-80 md:hover:opacity-100 sm:w-20"
+          />
+          <Image
+            src={AstroImage}
+            alt="Astro Image"
+            class="w-8 transition duration-300 opacity-80 md:hover:opacity-100 sm:w-24"
+          />
+          <Image
+            src={ReactImage}
+            alt="React Image"
+            class="w-8 transition duration-300 opacity-80 md:hover:opacity-100 sm:w-24"
+          />
+          <Image
+            src={RailsImage}
+            alt="Rails Image"
+            class="w-20 transition duration-300 opacity-80 md:hover:opacity-100 sm:w-28"
+          />
+        </main>
       </footer>
     </article>
   </section>
   <section>
     <article
-      class="max-w-screen-xl py-48 mx-auto space-y-10 md:py-60 lg:py-[30rem]"
+      class="max-w-screen-xl pt-48 mx-auto space-y-10 md:pt-60 lg:pt-[30rem]"
     >
       Hello
     </article>
