Improve UX and UI.

--- a/src/components/navigation/NavigationBar/NavigationBar.astro
+++ b/src/components/navigation/NavigationBar/NavigationBar.astro
@@ -34,26 +34,26 @@ const { HiBars3BottomRight } = ReactIcons;
       id="navbar-sticky"
     >
       <ul
-        class="flex flex-col p-4 mt-4 border border-gray-100 rounded-lg md:p-0 bg-gray-50 md:space-x-8 md:flex-row md:mt-0 md:border-0 md:bg-transparent"
+        class="flex flex-col p-4 mt-4 border border-gray-100 rounded-lg md:p-0 bg-gray-50 md:space-x-4 md:flex-row md:mt-0 md:border-0 md:bg-transparent"
       >
         <li>
           <a
             href="/"
-            class="block px-3 py-2 text-blue-800 rounded md:text-sm md:text-white hover:bg-[var(--CL-primary-blue)] hover:text-white md:hover:bg-transparent md:hover:border-b md:px-0 md:py-2 transition md:rounded-none"
+            class="block px-3 py-2 text-blue-800 rounded md:text-sm md:text-white hover:bg-[var(--CL-primary-blue)] hover:text-white md:hover:bg-transparent md:hover:!bg-white md:hover:text-gray-900 md:p-2 transition"
             >Home</a
           >
         </li>
         <li>
           <a
             href="/services"
-            class="block px-3 py-2 text-blue-800 rounded md:text-sm md:text-white hover:bg-[var(--CL-primary-blue)] hover:text-white md:hover:bg-transparent md:hover:border-b md:px-0 md:py-2 transition md:rounded-none"
+            class="block px-3 py-2 text-blue-800 rounded md:text-sm md:text-white hover:bg-[var(--CL-primary-blue)] hover:text-white md:hover:bg-transparent md:hover:!bg-white md:hover:text-gray-900 md:p-2 transition"
             >Services</a
           >
         </li>
         <li>
           <a
             href="/portfolio"
-            class="block px-3 py-2 text-blue-800 rounded md:text-sm md:text-white hover:bg-[var(--CL-primary-blue)] hover:text-white md:hover:bg-transparent md:hover:border-b md:px-0 md:py-2 transition md:rounded-none"
+            class="block px-3 py-2 text-blue-800 rounded md:text-sm md:text-white hover:bg-[var(--CL-primary-blue)] hover:text-white md:hover:bg-transparent md:hover:!bg-white md:hover:text-gray-900 md:p-2 transition"
             >Portfolio</a
           >
         </li>
