--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import { Image } from "astro:assets";
-import * as ReactIcons from "react-icons/hi2";
+import * as HiIcons from "react-icons/hi2";
+import * as FaIcons from "react-icons/fa";
 import HeroImage from "../assets/images/hero/hero.jpg";
 import AstroImage from "../assets/images/technologies/astro.svg";
 import CSSImage from "../assets/images/technologies/css.svg";
@@ -9,7 +10,8 @@ import RailsImage from "../assets/images/technologies/rails.svg";
 import ReactImage from "../assets/images/technologies/react.svg";
 import Layout from "../layouts/Layout.astro";
 import YachtIllustration from "../assets/images/illustrations/yacht.svg";
-const { HiDevicePhoneMobile, HiShieldCheck, HiBolt } = ReactIcons;
+const { HiDevicePhoneMobile, HiShieldCheck, HiBolt } = HiIcons;
+const { FaGithub, FaLinkedin, FaWhatsapp } = FaIcons;
 ---
 
 <Layout title="RysthCraft | Software Developer | Professional Websites">
@@ -36,15 +38,18 @@ const { HiDevicePhoneMobile, HiShieldCheck, HiBolt } = ReactIcons;
           <a
             href="https://github.com/Rysth"
             target="_blank"
-            class="py-3 px-6 w-32 text-sm text-center border border-transparent text-[var(--CL-primary-blue)] duration-100 bg-white rounded-lg md:px-8 md:hover:bg-black md:hover:text-white md:transition"
+            class="py-3 px-6 w-36 text-sm justify-center border border-transparent text-[var(--CL-primary-blue)] duration-100 bg-white rounded-lg md:px-8 md:hover:bg-black md:hover:text-white md:transition flex items-center gap-1"
           >
-            GitHub
+            <FaGithub className="text-xl" />
+             GitHub
           </a>
           <a
             href="https://www.linkedin.com/in/john-palacios-rysthcraft/"
             target="_blank"
-            class="w-32 px-6 py-3 text-sm text-center text-white duration-100 border rounded-lg md:px-8 md:hover:bg-black md:hover:border-transparent md:hover:text-white md:transition"
-            >LinkedIn</a
+            class="flex items-center justify-center gap-1 px-6 py-3 text-sm text-white duration-100 border rounded-lg w-36 md:px-8 md:hover:bg-black md:hover:border-transparent md:hover:text-white md:transition"
+          >
+            <FaLinkedin className="text-xl" />
+             LinkedIn</a
           >
         </div>
       </main>
@@ -55,7 +60,7 @@ const { HiDevicePhoneMobile, HiShieldCheck, HiBolt } = ReactIcons;
           class="block w-full h-full max-w-4xl mx-auto shadow-xl rounded-xl"
         />
         <main
-          class="flex flex-wrap items-center justify-center gap-5 mt-5 md:gap-12"
+          class="flex flex-wrap items-center justify-center gap-5 mt-5 md:gap-16"
         >
           <Image
             src={HTMLImage}
@@ -174,12 +179,12 @@ const { HiDevicePhoneMobile, HiShieldCheck, HiBolt } = ReactIcons;
   </section>
   <section class="p-4 bg-slate-100">
     <article class="max-w-screen-xl py-12 mx-auto sm:py-24">
-      <main class="grid gap-10 sm:grid-cols-2">
+      <main class="grid items-center gap-20 sm:grid-cols-2">
         <header
           class="flex flex-col justify-center gap-5 text-center sm:gap-10 sm:text-left"
         >
           <h2
-            class="text-3xl font-bold md:leading-loose sm:text-2xl md:text-4xl lg:text-6xl text-[var(--CL-primary-blue)]"
+            class="text-2xl font-bold sm:text-2xl md:text-4xl lg:text-6xl text-[var(--CL-primary-blue)]"
           >
             Web Solutions for Small Businesses
           </h2>
@@ -188,12 +193,21 @@ const { HiDevicePhoneMobile, HiShieldCheck, HiBolt } = ReactIcons;
             and distinctive solutions to boost your digital presence and drive
             growth.
           </p>
+          <ul class="text-sm sm:text-base">
+            <li>
+              <span class="font-bold text-[var(--CL-primary-blue)] text-lg"
+                >10+</span
+              >
+               Professional Websites
+            </li>
+          </ul>
           <a
-            href="https://github.com/Rysth"
+            href="http://tinyurl.com/contact-wsp"
             target="_blank"
-            class="w-32 px-6 py-3 text-sm text-center text-white duration-100 bg-indigo-700 border border-transparent rounded-lg md:px-8 md:hover:bg-black md:transition"
+            class="flex items-center gap-1 px-6 py-3 mx-auto text-sm text-center text-white duration-100 bg-indigo-700 border border-transparent rounded-lg w-36 sm:mx-0 md:px-8 md:hover:bg-black md:transition"
           >
-            Contact
+            <FaWhatsapp className="text-xl" />
+             Contact
           </a>
         </header>
         <Image src={YachtIllustration} alt="Yatch Illustration" />
