--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,8 +12,9 @@ import HTMLImage from "../assets/images/technologies/html.svg";
 import RailsImage from "../assets/images/technologies/rails.svg";
 import ReactImage from "../assets/images/technologies/react.svg";
 import Layout from "../layouts/Layout.astro";
+import BrandImage from "../assets/images/brand/brand.svg";
 const { HiDevicePhoneMobile, HiShieldCheck, HiBolt } = HiIcons;
-const { FaGithub, FaLinkedin, FaWhatsapp } = FaIcons;
+const { FaGithub, FaLinkedin, FaWhatsapp, FaInstagram, FaGoogle } = FaIcons;
 ---
 
 <Layout title="RysthCraft | Software Developer | Professional Websites">
@@ -232,11 +233,18 @@ const { FaGithub, FaLinkedin, FaWhatsapp } = FaIcons;
           <div
             class="relative mx-4 mt-4 overflow-hidden bg-white h-60 sm:h-72 bg-clip-border rounded-xl"
           >
-            <Image
-              src={UpdateProject}
-              alt="UpdateEC's website"
-              class="object-cover w-full h-full"
-            />
+            <a
+              href="https://updateec.netlify.app/"
+              target="_blank"
+              rel="noopener noreferrer"
+              class=""
+            >
+              <Image
+                src={UpdateProject}
+                alt="UpdateEC's website"
+                class="object-cover w-full h-full transition duration-300 md:hover:grayscale"
+              /></a
+            >
           </div>
           <div class="p-4">
             <div class="flex items-center justify-between mb-2">
@@ -277,7 +285,7 @@ const { FaGithub, FaLinkedin, FaWhatsapp } = FaIcons;
             <a
               href="https://updateec.netlify.app/"
               target="_blank"
-              class="block text-center uppercase w-full py-2 text-xs font-medium text-white bg-[var(--CL-primary-blue)] rounded md:hover:bg-black md:transition"
+              class="block text-center uppercase w-full py-3 text-xs font-medium text-white bg-[var(--CL-primary-blue)] rounded md:hover:bg-black md:transition duration-300"
             >
               See Live</a
             >
@@ -289,11 +297,17 @@ const { FaGithub, FaLinkedin, FaWhatsapp } = FaIcons;
           <div
             class="relative mx-4 mt-4 overflow-hidden bg-white h-60 sm:h-72 bg-clip-border rounded-xl"
           >
-            <Image
-              src={JPProject}
-              alt="JP Refrigeration's website"
-              class="object-cover w-full h-full"
-            />
+            <a
+              href="https://jprefrigeracion.netlify.app/"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <Image
+                src={JPProject}
+                alt="JP Refrigeration's website"
+                class="object-cover w-full h-full transition duration-300 md:hover:grayscale"
+              />
+            </a>
           </div>
           <div class="p-4">
             <div class="flex items-center justify-between mb-2">
@@ -330,7 +344,7 @@ const { FaGithub, FaLinkedin, FaWhatsapp } = FaIcons;
             <a
               href="https://jprefrigeracion.netlify.app/"
               target="_blank"
-              class="block text-center uppercase w-full py-2 text-xs font-medium text-white bg-[var(--CL-primary-blue)] rounded md:hover:bg-black md:transition"
+              class="block text-center uppercase w-full py-3 text-xs font-medium text-white bg-[var(--CL-primary-blue)] rounded md:hover:bg-black md:transition duration-300"
             >
               See Live</a
             >
@@ -339,4 +353,50 @@ const { FaGithub, FaLinkedin, FaWhatsapp } = FaIcons;
       </main>
     </article>
   </section>
+  <footer
+    class="w-full max-w-screen-xl py-10 px-4 mx-auto bg-[var(--CL-primary-blue)] rounded-t-xl"
+  >
+    <div class="text-center">
+      <a
+        href="/"
+        class="flex items-center justify-center mx-auto space-x-3 max-w-max"
+      >
+        <Image src={BrandImage} class="w-28 sm:w-32" alt="Flowbite Logo" />
+      </a>
+      <div class="mt-3 text-sm">
+        <p class="text-gray-200">
+          Professional Full-Stack Developer | Astro, React, Ruby on Rails
+        </p>
+        <p class="text-gray-200">© RysthCraft. 2024. All rights reserved.</p>
+      </div>
+
+      <!-- Social Brands -->
+      <div class="mt-3 space-x-1">
+        <a
+          target="_blank"
+          class="inline-flex items-center justify-center w-10 h-10 text-center text-gray-200 transition rounded-full hover:bg-white hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 focus:ring-offset-white dark:text-gray-200 dark:hover:text-gray-200 dark:hover:bg-gray-800"
+          href="https://maps.app.goo.gl/o3AGmb5HsDcg4pqP6"
+        >
+          <FaGoogle />
+        </a>
+
+        <a
+          target="_blank"
+          class="inline-flex items-center justify-center w-10 h-10 text-center text-gray-200 transition rounded-full hover:bg-white hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 focus:ring-offset-white dark:text-gray-200 dark:hover:text-gray-200 dark:hover:bg-gray-800"
+          href="https://github.com/Rysth"
+        >
+          <FaGithub />
+        </a>
+        <a
+          target="_blank"
+          class="inline-flex items-center justify-center w-10 h-10 text-center text-gray-200 transition rounded-full hover:bg-white hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 focus:ring-offset-white dark:text-gray-200 dark:hover:text-gray-200 dark:hover:bg-gray-800"
+          href="https://www.instagram.com/rysthcraft/"
+        >
+          <FaInstagram />
+        </a>
+      </div>
+      <!-- End Social Brands -->
+    </div>
+    <!-- End Grid -->
+  </footer>
 </Layout>
