--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -199,7 +199,7 @@ const { FaGithub, FaLinkedin, FaWhatsapp, FaInstagram, FaGoogle } = FaIcons;
           <a
             href="http://tinyurl.com/contact-wsp"
             target="_blank"
-            class="flex items-center justify-center gap-1 px-6 py-3 mx-auto text-sm text-center text-white duration-100 bg-indigo-700 border border-transparent rounded-lg w-36 sm:mx-0 md:px-8 md:hover:bg-black md:transition"
+            class="flex items-center justify-center gap-1 px-6 py-3 mx-auto text-sm text-center text-white duration-100 border border-transparent rounded-lg bg-[var(--CL-primary-blue)] w-36 sm:mx-0 md:px-8 md:hover:bg-black md:transition"
           >
             <FaWhatsapp className="text-xl" />
              Contact
@@ -285,7 +285,7 @@ const { FaGithub, FaLinkedin, FaWhatsapp, FaInstagram, FaGoogle } = FaIcons;
             <a
               href="https://updateec.netlify.app/"
               target="_blank"
-              class="block text-center uppercase w-full py-3 text-xs font-medium text-white bg-[var(--CL-primary-blue)] rounded md:hover:bg-black md:transition duration-300"
+              class="block text-center uppercase w-full py-3 text-xs font-medium text-white bg-[var(--CL-primary-blue)] rounded md:hover:bg-black md:transition duration-500"
             >
               See Live</a
             >
@@ -344,7 +344,7 @@ const { FaGithub, FaLinkedin, FaWhatsapp, FaInstagram, FaGoogle } = FaIcons;
             <a
               href="https://jprefrigeracion.netlify.app/"
               target="_blank"
-              class="block text-center uppercase w-full py-3 text-xs font-medium text-white bg-[var(--CL-primary-blue)] rounded md:hover:bg-black md:transition duration-300"
+              class="block text-center uppercase w-full py-3 text-xs font-medium text-white bg-[var(--CL-primary-blue)] rounded md:hover:bg-black md:transition duration-500"
             >
               See Live</a
             >
